--- a/index.html
+++ b/index.html
@@ -1325,7 +1325,7 @@
                         <li>edges_assignment</li>
                         <li>faces_vertices</li>
                     </ul>
-                    You may specify the target fold angle of each crease using the edges_foldAngles field. 
+                    You may specify the target fold angle of each crease using the edges_foldAngle field. 
                     Note that fold angle is a number in degrees lying in the range [−180, 180]. 
                     The fold angle is positive for valley folds, negative for mountain folds, and zero for flat, unassigned, and border folds.
                     Accordingly, the sign of edges_foldAngle should match edges_assignment if both are specified.<br/><br/>
@@ -1551,7 +1551,7 @@
                 </label>
                 <label class="bigLabel checkbox" for="exportFoldAngle">
                     <input id="exportFoldAngle" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                    Save with vertices_foldAngles
+                    Save with edges_foldAngle
                 </label>
                 <span class="smallTxt">For more information about the FOLD file format, see the <a target="_blank" href="https://github.com/edemaine/fold">offical docs</a>.
                 Use the <a href="https://edemaine.github.io/fold/examples/foldviewer.html" target="_blank">FOLD viewer</a> to check that your file has been exported correctly.</span>
