backwards compatibility with 1.0 importing edges_foldAngles

--- a/index.html
+++ b/index.html
@@ -1551,7 +1551,7 @@
                 </label>
                 <label class="bigLabel checkbox" for="exportFoldAngle">
                     <input id="exportFoldAngle" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
-                    Save with edges_foldAngle
+                    Save target angles in edges_foldAngle
                 </label>
                 <span class="smallTxt">For more information about the FOLD file format, see the <a target="_blank" href="https://github.com/edemaine/fold">offical docs</a>.
                 Use the <a href="https://edemaine.github.io/fold/examples/foldviewer.html" target="_blank">FOLD viewer</a> to check that your file has been exported correctly.</span>
