--- a/index.html
+++ b/index.html
@@ -1596,7 +1596,8 @@
                 <br/><br/>
                 From Percent: &nbsp;&nbsp;<input value="" placeholder="" class="float startPercent form-control" type="text">&nbsp;&nbsp;&nbsp;&nbsp;
                 To Percent: &nbsp;&nbsp;<input value="" placeholder="" class="float toPercent form-control" type="text">&nbsp;&nbsp;&nbsp;&nbsp;<br></br>
-                Step Size: &nbsp;&nbsp;<input value="" placeholder="" class="float stepSize form-control" type="text">&nbsp;&nbsp;&nbsp;&nbsp;%<br></br>
+                Step Size: &nbsp;&nbsp;<input value="" placeholder="" class="float stepSize form-control" type="text">&nbsp;%&nbsp;&nbsp;&nbsp;
+                Error Dif per Second: &nbsp;&nbsp;<input value="" placeholder="" class="float errorDif form-control" type="text">&nbsp;&nbsp;&nbsp;<br></br>
                 Dimensions: &nbsp;&nbsp;<b><span class="exportDimensions"></span> <span class="unitsDisplay"></span></b><br/>
                 <label class="bigLabel checkbox" for="triangulateFOLDseriesExport">
                     <input id="triangulateFOLDseriesExport" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
@@ -1610,14 +1611,27 @@
                     <input id="exportFoldSeriesActualAngle" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
                     Save current simulation angles in edges_crease_angle_os
                 </label>
-                <div id="percInfo" class="bigLabel">
-                  <label>Current Fold Percentage: <span id="foldPercentOutput"></span></label>
-                </div>
                 <span class="smallTxt">For more information about the FOLD file format, see the <a target="_blank" href="https://github.com/edemaine/fold">offical docs</a>.
                 Use the <a href="https://edemaine.github.io/fold/examples/foldviewer.html" target="_blank">FOLD viewer</a> to check that your file has been exported correctly.</span>
             </div>
             <div class="modal-footer">
                 <button id="doFOLDseriesSave" type="button" class="actionButton btn btn-success" data-dismiss="modal">Save</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+<div class="modal fade" id="FOLDseriesProgressModal" tabindex="-1" role="dialog" data-backdrop="static" data-keyboard="false">
+    <div class="modal-dialog modal-med">
+        <div class="modal-content">
+            <div class="modal-body">
+              <b>FOLD Series Progress</b><br/><br/>
+              <div id="percInfo" class="bigLabel">
+                  <label>Current Fold Percentage: <span id="foldPercentOutput"></span></label>
+              </div>
+              <div class="modal-footer">
+                  <button id="FOLDseriesSaveCancel" type="button" class="actionButton btn btn-danger" data-dismiss="modal">Cancel</button>
+                  <button id="FOLDseriesSaveSkip" type="button" class="actionButton btn btn-warning">Skip Itteration</button>
+              </div>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
