--- a/index.html
+++ b/index.html
@@ -1780,6 +1780,22 @@
                     Vertex merge tolerance (px) : &nbsp;&nbsp;<input id="vertTol" value="" placeholder="" class="float form-control" type="text">
                     <div class="smallTxt">Vertices within this px tolerance in the SVG will be merged into one.  It is recommended to keep this number above zero.</div>
                 </p>
+                <!-- for curved folging -->
+                <p><b>For curved folding</b>
+                    <label class="checkbox" for="curvedLines">
+                        <input id="curvedLines" data-toggle="checkbox" class="custom-checkbox layersSelector" type="checkbox"><span class="icons"><span class="icon-unchecked"></span><span class="icon-checked"></span></span>
+                        Curved lines
+                    </label>
+                    <div class="smallTxt">Check this box if the crease pattern contains curved lines.</div>
+                </p>
+                <p>
+                    Intervals of vertices for discretization (px) : &nbsp;&nbsp;<input id="vertInt" value="" placeholder="" class="float form-control" type="text">
+                    <div class="smallTxt">Curves and borderlines are divided into segments by this value. It is recommended to keep this number above zero.</div>
+                </p>
+                <p>
+                    Approximation quality of curves (px) : &nbsp;&nbsp;<input id="apprCurve" value="" placeholder="" class="float form-control" type="text">
+                    <div class="smallTxt">Curves are approximated by polylines. The smaller the value, the higher the quality of the approximation.</div>
+                </p>
             </div>
             <div class="modal-footer">
                 <div id="tipImportSVG" class="smallTxt">Having trouble?  See these <a class="goToImportInstructions" href="#">SVG Import Tips</a>.</div>
