--- a/index.html
+++ b/index.html
@@ -793,6 +793,9 @@
     <script type="text/javascript" src="js/VRInterface.js"></script>
     <script type="text/javascript" src="js/videoAnimator.js"></script>
 
+    <script type="text/javascript" src="dependencies/cdt2d.js"></script><!-- constrained delaunay triangulation -->
+    <script type="text/javascript" src="js/curvedFolding.js"></script>
+
     <script type="text/javascript" src="js/main.js"></script>
 </head>
 <body>
