Discretize curves automatically.

--- a/index.html
+++ b/index.html
@@ -794,6 +794,7 @@
     <script type="text/javascript" src="js/videoAnimator.js"></script>
 
     <script type="text/javascript" src="dependencies/cdt2d.js"></script><!-- constrained delaunay triangulation -->
+    <script type="text/javascript" src="dependencies/svgpath.js"></script>
     <script type="text/javascript" src="js/curvedFolding.js"></script>
 
     <script type="text/javascript" src="js/main.js"></script>
