more examples added

--- a/index.html
+++ b/index.html
@@ -990,7 +990,10 @@
                     <li class="dropdown-submenu">
                         <a tabindex="-1">Pleating<span class="pull-right fui-arrow-right"></span></a>
                         <ul class="dropdown-menu">
+                            <li><a href="#" class="demo author" data-author="konjevod" data-url="Pleating/BoxPleatPyramid.fold">Box Pleat Pyramid</a></li>
                             <li><a href="#" class="demo author" data-author="konjevod" data-url="Pleating/BoxPleatSpiralPyramid.fold">Box Pleat Spiral Pyramid</a></li>
+                            <li><a href="#" class="demo author" data-author="konjevod" data-url="Pleating/BoxPleatInOutWave.fold">Box Pleat In Out Wave</a></li>
+                            <li><a href="#" class="demo author" data-author="konjevod" data-url="Pleating/BoxPleatSkipOneWave.fold">Box Pleat Skip One Wave</a></li>
                             <li><a href="#" class="demo author" data-author="konjevod" data-url="Pleating/BoxPleatTessellation.fold">Box Pleat Tessellation</a></li>
                             <li><a href="#" class="demo author" data-author="konjevod" data-url="Pleating/BoxPleatTessellationLarge.fold">Box Pleat Tessellation (large)</a></li>
                         </ul>
